fixed nav overflowing issue

--- a/src/App.css
+++ b/src/App.css
@@ -336,6 +336,9 @@ text-decoration: underline;
 
 
 @media only screen and (max-width: 768px) {
+  .main-nav ul {
+    flex-wrap: wrap;
+  }
   .hero {
     overflow: visible;
   }
